Automaattinen palutus -> palautus
Liittyy tikettiin https://github.com/KohaSuomi/Koha-translations/issues/15

Lähetettävät kuljetukset -toiminnon Syy-kentässä on sana palutus

Automaattinen palutus kotikirjastoon -> Automaattinen palautus kotikirjastoon

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-05-09 15:58+0300\n"
-"PO-Revision-Date: 2023-05-30 16:24+0300\n"
+"PO-Revision-Date: 2023-08-02 14:35+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.3.1\n"
+"X-Generator: Poedit 3.3.2\n"
 "X-Pootle-Path: /fi/22.11/fi-FI-staff-prog.po\n"
 "X-Pootle-Revision: 1\n"
 "X-POOTLE-MTIME: 1676373862.176928\n"
@@ -13726,7 +13726,7 @@ msgstr "Automaattinen palautus varaustilaan"
 #: koha-tmpl/intranet-tmpl/prog/en/includes/transfer_reasons.inc:6
 #, c-format
 msgid "Automatic return to home"
-msgstr "Automaattinen palutus kotikirjastoon"
+msgstr "Automaattinen palautus kotikirjastoon"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/cataloging-home.tt:142
 #: koha-tmpl/intranet-tmpl/prog/en/includes/cat-menu.inc:75
