Täsmennys varauksen keskeytyksen voimassaoloaikaan
Liittyy tikettiin #19, jossa todetaan "asti"-sanan olevan liian epämääräinen. Haluttu lause koostuu ainakin kahdesta eri osasesta (ellei kolmestakin), mutta "until %s" -osan saanee käännettyä jotenkin järkevästi näin:

"Varaus on keskeytetty tähän päivämäärään 01.11.2023 asti" -> "Varaus on keskeytetty ja viimeinen voimassaolopäivä on 01.11.2023"

--- a/po/fi-FI-messages-js.po
+++ b/po/fi-FI-messages-js.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-09 15:58+0300\n"
-"PO-Revision-Date: 2023-05-10 09:27+0300\n"
+"PO-Revision-Date: 2023-08-22 11:25+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.3.2\n"
 "X-Pootle-Path: /fi/22.11/fi-FI-messages-js.po\n"
 "X-Pootle-Revision: 1\n"
 "X-POOTLE-MTIME: 1676371827.367132\n"
@@ -3166,7 +3166,7 @@ msgstr "seuraa tarveperustaista hankintaa"
 #: koha-tmpl/intranet-tmpl/prog/js/holds.js:272
 #, javascript-format
 msgid "until %s"
-msgstr "tähän päivämäärään %s asti"
+msgstr "ja viimeinen voimassaolopäivä on %s"
 
 #: koha-tmpl/intranet-tmpl/prog/js/patron-autocomplete.js:106
 msgid "years"
