Viestiasetusten muutos -popup
Vaihda viestiasetukset oletukseksi tälle ryhmälle? -> Vaihda asiakkaan viestiasetukset asiakastyypin oletusarvoiksi?

Liittyy tikettiin #3

Tämä muutos on tehty jo aiemminkin, mutta se on jossain välissä ilmeisesti tippunut matkasta.

--- a/po/fi-FI-messages-js.po
+++ b/po/fi-FI-messages-js.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-09 15:58+0300\n"
-"PO-Revision-Date: 2023-08-22 11:25+0300\n"
+"PO-Revision-Date: 2023-09-01 12:38+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -664,7 +664,7 @@ msgstr ""
 
 #: koha-tmpl/intranet-tmpl/prog/js/messaging-preference-form.js:20
 msgid "Change messaging preferences to default for this category?"
-msgstr "Vaihda viestiasetukset oletusasetukseksi tälle ryhmälle?"
+msgstr "Vaihda asiakkaan viestiasetukset asiakastyypin oletusarvoiksi?"
 
 # painike
 #: koha-tmpl/opac-tmpl/bootstrap/js/overdrive.js:301
