Access your background jobs -> Taustatyösi
Tikettiin #23 liittyen käännösmuutos, jossa Access your background jobs muutetaan

Tausta-ajojen käyttö -> Taustatyösi

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-09-15 12:31+0300\n"
-"PO-Revision-Date: 2023-09-21 15:00+0300\n"
+"PO-Revision-Date: 2023-09-22 11:12+0300\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -8383,7 +8383,7 @@ msgstr "Käyttää palvelimelle tallennettuja tiedostoja "
 #: koha-tmpl/intranet-tmpl/prog/en/modules/intranet-main.tt:251
 #, c-format
 msgid "Access your background jobs"
-msgstr "Tausta-ajojen käyttö"
+msgstr "Taustatyösi"
 
 #. SCRIPT
 #: koha-tmpl/intranet-tmpl/prog/en/includes/str/tinymce_i18n.inc:2
