Payout amount -> Takaisinmaksu
Oli aiemmin Maksun määrä

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 23.12.00.001\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-12-21 03:17+0000\n"
-"PO-Revision-Date: 2023-12-28 12:48+0200\n"
+"PO-Revision-Date: 2023-12-29 12:21+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi_FI\n"
@@ -50080,7 +50080,7 @@ msgstr "Käytä alennusta"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tt:191
 #, c-format
 msgid "Payout amount"
-msgstr "Maksun määrä"
+msgstr "Takaisinmaksu"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tt:230
 #, c-format
