Add concern -> Lisää virheilmoitus

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 23.12.00.001\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-12-21 03:17+0000\n"
-"PO-Revision-Date: 2023-12-29 12:21+0200\n"
+"PO-Revision-Date: 2024-01-03 12:30+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi_FI\n"
@@ -11335,7 +11335,7 @@ msgstr "Ei voida ilmoittaa palautetuksi"
 #: koha-tmpl/intranet-tmpl/prog/en/includes/modals/add_catalog_concern.inc:13
 #, c-format
 msgid "Add concern"
-msgstr "Add ongelma"
+msgstr "Lisää virheilmoitus"
 
 #: koha-tmpl/intranet-tmpl/prog/en/includes/modals/add_catalog_concern.inc:25
 #, c-format
