Listat, joista löytyy tämä nide: -> Listat, joissa tämä nimeke on:

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 23.12.00.001\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-12-21 03:17+0000\n"
-"PO-Revision-Date: 2024-01-05 10:07+0200\n"
+"PO-Revision-Date: 2024-01-12 13:10+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi_FI\n"
@@ -39408,7 +39408,7 @@ msgstr "Analyyttisia tietueita haettaessa tuli virhe, tarkista lokitiedot."
 #: koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt:125
 #, c-format
 msgid "Lists that include this title: "
-msgstr "Listat, joista löytyy tämä nide: "
+msgstr "Listat, joissa tämä nimeke on: "
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt:133
 #, c-format
