Odottavat varaukset -> Varaukset
Liittyy tikettiin #31 eli asiakkaan yhteenveto-tulosteen väliotsikkoon muutos.

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 23.12.00.001\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-12-21 03:17+0000\n"
-"PO-Revision-Date: 2024-01-12 13:10+0200\n"
+"PO-Revision-Date: 2024-01-12 14:22+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi_FI\n"
@@ -52336,7 +52336,7 @@ msgstr "%sErääntynyt.%s&nbsp;%s"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember-print.tt:116
 #, c-format
 msgid "Pending holds"
-msgstr "Odottavat varaukset"
+msgstr "Varaukset"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember-print.tt:123
 #, c-format
