#9 Forever-sanan käännöksen muutos Toistaiseksi

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-09-15 12:31+0300\n"
-"PO-Revision-Date: 2024-01-12 14:22+0200\n"
+"PO-Revision-Date: 2024-01-17 09:07+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -29886,7 +29886,7 @@ msgstr "Pakota lainaus, jos on rajoitus "
 #: koha-tmpl/intranet-tmpl/prog/en/modules/onboarding/onboardingstep2.tt:100
 #, c-format
 msgid "Forever"
-msgstr "Aina"
+msgstr "Toistaiseksi"
 
 #. For the first occurrence,
 #. %1$s:  INCLUDE 'patron-title.inc' patron => holdfor_patron no_title => 1 no_cardnumber => 1 no_html = 1
