--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-09-15 12:31+0300\n"
-"PO-Revision-Date: 2024-01-17 09:07+0200\n"
+"PO-Revision-Date: 2024-01-23 14:22+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -6978,7 +6978,7 @@ msgstr "(Suodatettu. "
 #: koha-tmpl/intranet-tmpl/prog/en/includes/accounts.inc:52
 #, c-format
 msgid "(Forgiven)"
-msgstr "(Maksun mitätöinti)"
+msgstr "(Maksu mitätöity)"
 
 #: koha-tmpl/intranet-tmpl/prog/en/includes/authorities-search-results.inc:48
 #, c-format
@@ -29914,7 +29914,7 @@ msgstr "Poista myöhästymismaksut"
 #: koha-tmpl/intranet-tmpl/prog/en/includes/accounts.inc:35
 #, c-format
 msgid "Forgiven"
-msgstr "Maksun mitätöinti"
+msgstr "Maksu mitätöity"
 
 #. For the first occurrence,
 #. SCRIPT
@@ -49213,7 +49213,7 @@ msgstr "Kuinka monta nidettä luodaan."
 #, c-format
 msgid ""
 "Please enter a report name and descriptive note before sharing (minimum 20 characters) "
-msgstr "Lisää raportin nimi ja kuvaus ennen jakamista (vähintään 20 merkkiä) "
+msgstr "Lisää raportille nimi ja kuvaava huomautus ennen jakamista (vähintään 20 merkkiä)"
 
 #. SCRIPT
 #: koha-tmpl/intranet-tmpl/prog/en/modules/tools/upload.tt:341
