New batch record deletion -lauseen korjaus
Tiketti #34

New batch record deletion -lause oli käännetty muotoon Uusi niteiden poisto eräajona. Se on nyt muutettu muotoon Uusi tietueiden poisto eräajona.

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "POT-Creation-Date: 2023-09-15 12:31+0300\n"
-"PO-Revision-Date: 2024-01-23 14:22+0200\n"
+"PO-Revision-Date: 2024-02-07 14:01+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi\n"
@@ -41890,7 +41890,7 @@ msgstr "Uusi asiakkaiden muokkaus eräajona"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/tools/batch_delete_records.tt:219
 #, c-format
 msgid "New batch record deletion"
-msgstr "Uusi niteiden poisto eräajona"
+msgstr "Uusi tietueiden poisto eräajona"
 
 #. A
 #: koha-tmpl/intranet-tmpl/prog/en/modules/tools/batch_record_modification.tt:266
