--- a/po/sv-SE-pref.po
+++ b/po/sv-SE-pref.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 22.11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-20 11:46-0300\n"
-"PO-Revision-Date: 2024-02-16 13:25+0200\n"
+"PO-Revision-Date: 2024-02-16 14:11+0200\n"
 "Last-Translator: plumflower <jeff_lindqvist@hotmail.com>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: sv\n"
@@ -3754,7 +3754,7 @@ msgstr "SIP2"
 
 # Circulation > Self check-out module
 msgid "circulation.pref Self check-in module"
-msgstr "Självutcheckningsmodul"
+msgstr "Självincheckningsmodul"
 
 # Circulation > Self check-out module
 msgid "circulation.pref Self check-out module"
