--- a/po/fi-FI-installer-UNIMARC.po
+++ b/po/fi-FI-installer-UNIMARC.po
@@ -1,10 +1,10 @@
 # Compendium of fi.
 msgid ""
 msgstr ""
-"Project-Id-Version: Koha 23.12.00.001\n"
+"Project-Id-Version: Koha 23.11.03.000\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-05-02 07:12-0300\n"
-"PO-Revision-Date: 2023-12-15 03:03+0000\n"
+"PO-Revision-Date: 2023-11-28 08:32+0000\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi-FI\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.3-rc\n"
+"X-Generator: Weblate 5.1.1\n"
 "X-Pootle-Revision: 1\n"
 "X-Pootle-Path: /fi/22.11/fi-FI-installer-UNIMARC.po\n"
 "X-POOTLE-MTIME: 1692681936.125089\n"
@@ -1155,7 +1155,7 @@ msgstr "Tietueen kontrollinumero"
 
 #: installer/data/mysql/en/marcflavour/unimarc/mandatory/authorities_normal_unimarc.yml:auth_subfield_structure:3:row:1568
 msgid "Nonpublic note"
-msgstr "Huomautus virkailijalle"
+msgstr "Viesti virkailijalle:"
 
 #: installer/data/mysql/en/marcflavour/unimarc/mandatory/authorities_normal_unimarc.yml:auth_subfield_structure:3:row:1569
 msgid "Access method"
