Clear on loan -> Poista valinta lainassa olevilta
Oli "Poista lainassa-tila"

--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 23.11.03.000\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-03-12 03:06+0000\n"
-"PO-Revision-Date: 2024-03-19 14:13+0200\n"
+"PO-Revision-Date: 2024-03-20 09:08+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi_FI\n"
@@ -9327,7 +9327,7 @@ msgstr "Kopioi tämä osakenttä"
 #: koha-tmpl/intranet-tmpl/prog/en/includes/html_helpers.inc:225
 #, c-format
 msgid "Clear on loan"
-msgstr "Poista lainassa-tila"
+msgstr "Poista valinta lainassa olevilta"
 
 #: koha-tmpl/intranet-tmpl/prog/en/includes/html_helpers.inc:232
 #: koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqplan.tt:66
