--- a/po/fi-FI-staff-prog.po
+++ b/po/fi-FI-staff-prog.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Koha 23.11.03.000\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-03-12 03:06+0000\n"
-"PO-Revision-Date: 2024-03-20 09:08+0200\n"
+"PO-Revision-Date: 2024-03-20 10:16+0200\n"
 "Last-Translator: Anneli Österman <anneli.osterman@ouka.fi>\n"
 "Language-Team: Koha Translation Team\n"
 "Language: fi_FI\n"
@@ -9333,7 +9333,7 @@ msgstr "Poista valinta lainassa olevilta"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqplan.tt:66
 #, c-format
 msgid "Show/hide columns:"
-msgstr "Näytä/piilota rivejä:"
+msgstr "Näytä/piilota sarakkeita:"
 
 #: koha-tmpl/intranet-tmpl/prog/en/includes/html_helpers.inc:235
 #: koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqplan.tt:66
